# matsim-berlin

./: .editorconfig  .gitignore  Makefile  create-qsub-script.sh  pom.xml  pyproject.toml
analyzing/: initial_plan_used_piechart.py  trip-mode-change-map.py
output/: trip-mode-change.py
scenarios/berlin-v5.5-1pct/input/: berlin-v5.5-1pct.config.xml
scenarios/equil/: config_discrete-mode-choice.xml  config_multimodal-network-berlin.xml  config_multimodal.xml  network.xml  plans100-bln.xml  plans100.xml
scenarios/homework2-10pct/input/: berlin-v5.5-10pct.config.xml
scenarios/homework2-1pct/input/: berlin-v5-mode-vehicle-types.xml  berlin-v5.5-1pct.basecase.config.xml  berlin-v5.5-1pct.config.xml  linkgrep  parking-zones.geojson
scenarios/homework2-jbr-ng/input/: berlin-ng-config.xml
scenarios/homework2-jbr/input/: berlin-v5-mode-vehicle-types.xml  homework2-config.xml
shapes/: Umweltzone_test.shp  Umweltzone_test.shx
src/csv-analysis/: analysis.ipynb
src/main/java/org/matsim/analysis/: AffectedAgents.java
src/main/java/org/matsim/analysis/homework1/: AffectedAgents.java  AnalysisCarFreeScenario.java  AnalysisKmTravelled.java  AnalysisTrafficTime.java  EventsToPlans.java  ExecutedPlanEventHandler.java  PersonActivityHandler.java  PersonEventToPlanHandler.java  PersonLegHandler.java
src/main/java/org/matsim/analysis/homework2/: AnalyzeNumberOfRingCrossings.java
src/main/java/org/matsim/prepare/homework1/: AnalyzeEventsInRing.java  AnalyzeNetwork.java  CoordinateGeometryUtils.java  (+3 more)
src/main/java/org/matsim/run/: RunBerlinScenario.java
(+10 files in other folders)
