[tool.poetry]
name = "matsim-berlin"
version = "0.1.0"
description = ""
authors = ["Tobias Petrich <tobias.petrich@campus.tu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
jupyter = "^1.0.0"
pyproj = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
